check.txt
    Checking building_model v0.1.0 (/Users/german/Documents/simple/building_model)
error[E0061]: this function takes 2 arguments but 0 arguments were supplied
  --> src/hvac.rs:11:10
   |
11 | #[derive(SimpleInputOutput)]
   |          ^^^^^^^^^^^^^^^^^- supplied 0 arguments
   |          |
   |          expected 2 arguments
   |
note: associated function defined here
  --> src/hvac.rs:34:35
   |
34 | #[derive(BuildingObjectBehaviour, SimpleInputOutput)]
   |                                   -^^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 2 arguments but 0 arguments were supplied
  --> src/hvac.rs:11:10
   |
11 | #[derive(SimpleInputOutput)]
   |          ^^^^^^^^^^^^^^^^^- supplied 0 arguments
   |          |
   |          expected 2 arguments
   |
note: associated function defined here
  --> src/hvac.rs:61:35
   |
61 | #[derive(BuildingObjectBehaviour, SimpleInputOutput)]
   |                                   -^^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0061`.
error: could not compile `building_model`

To learn more, run the command again with --verbose.
